src/objects/LaunchCal_Motorola_Core_Directory__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval_Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flipped_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flipped_By</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>LaunchCal_Motorola_Core_Directories (Flipped_By)</relationshipLabel>
        <relationshipName>Flipped_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flipped_On__c</fullName>
        <label>Flipped_On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LaunchCal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LaunchCal</label>
        <referenceTo>LaunchCal__c</referenceTo>
        <relationshipLabel>LaunchCal_Motorola_Core_Directories</relationshipLabel>
        <relationshipName>LaunchCal_Motorola_Core_Directories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique_ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>LaunchCal_Motorola_Core_Directory</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LaunchCal_Motorola_Core_Directories</pluralLabel>
    <recordTypes>
        <fullName>Approver</fullName>
        <active>true</active>
        <label>Approver</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subscriber</fullName>
        <active>true</active>
        <label>Subscriber</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>